packages/components/src/DataTable/Footer.css
.pagination {
  display: flex;
  align-items: center;
  justify-content: space-between;
  min-height: calc(var(--space-smaller) + var(--space-largest));
  padding: var(--space-small) var(--space-base);
  border-top: var(--border-base) solid var(--color-border);
  flex-wrap: wrap;
  gap: var(--space-small);
}

.paginationInfo {
  flex: 2;
  white-space: nowrap;
}

.paginationNav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: var(--space-base);
  flex: 1;
}

.pagenationSelect {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: var(--space-small);
  min-width: calc(3 * var(--space-largest) + var(--space-small));
}

.paginationSelectLabel {
  min-width: calc(var(--space-extravagant) + var(--space-smaller));
}

.paginationButtons {
  display: flex;
  gap: var(--space-large);
  align-items: center;
  justify-content: center;

  @media (--handhelds) {
    gap: var(--space-base);
  }
}

